// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavIconItem > should render the component as HTMLAnchorElement 1`] = `
<DocumentFragment>
  <a
    aria-label="test icon"
    class="mocked-styled-2 el-anchor-nav-icon-item"
    href="#"
  >
    <span>
      test
    </span>
  </a>
</DocumentFragment>
`;

exports[`NavIconItem > should render the component as HTMLButtonElement 1`] = `
<DocumentFragment>
  <button
    aria-label="test icon"
    class="mocked-styled-1 el-button-nav-icon-item"
  >
    <span>
      test
    </span>
  </button>
</DocumentFragment>
`;

exports[`NavIconItem > should render the component with a badge 1`] = `
<DocumentFragment>
  <button
    aria-label="test icon"
    class="mocked-styled-1 el-button-nav-icon-item"
  >
    <span>
      test
    </span>
    <span
      class="mocked-styled-0 el-nav-icon-item-badge"
    />
  </button>
</DocumentFragment>
`;
